--- a/adddemo.html
+++ b/adddemo.html
@@ -21,11 +21,11 @@
 	<br/>
 	<br/>
 	<div>
-        <a href="itms-services://?action=download-manifest&url=https://www.yanchangba.com/mystyle/img/test/funnco.plist">带鱼用户端（版本号：3.0）</a>2016-04-15 16:42
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/kevintodo/OnlyMediaApp/master/app_user.plist">带鱼用户端（版本号：3.0）</a>2016-04-15 16:42
         <br/>
         <br/>
         <br/>
-        <a href="itms-services://?action=download-manifest&url=https://www.yanchangba.com/mystyle/img/test/funnco.plist">带鱼艺人端（版本号：3.0）</a>2016-04-15 16:42
+        <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/kevintodo/OnlyMediaApp/master/app_admin.plist">带鱼艺人端（版本号：3.0）</a>2016-04-15 16:42
  
 
 </section>
